traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:27: error: ';' expected but 'return' found.
  } return true
    ^